[gd_scene load_steps=3 format=3 uid="uid://dl4f0ltn03a2e"]

[ext_resource type="Script" path="res://Objects/spawner.gd" id="1_3c67v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23hn4"]
size = Vector2(720, 32)

[node name="Spawner" type="Area2D"]
position = Vector2(360, 440)
script = ExtResource("1_3c67v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_23hn4")

[node name="TreeTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="RockTimer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="FlameTimer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="TreeTimer" to="." method="_on_tree_timer_timeout"]
[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="timeout" from="FlameTimer" to="." method="_on_flame_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
